# esp32_dht22

./: .gitignore  CMakeLists.txt  README.md
components/dht/: DHT_c.c
components/test_dht/: CMakeLists.txt  test_dht.c  test_dht.h
main/: CMakeLists.txt  component.mk  esp32_dht22.c
